improved map entry codec